--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -163,6 +163,8 @@ trainer:
   logger: "wandb"
   dump_data_batch: false
   dump_eval_results: true
+  # SkyRL logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+  log_level: "INFO"
 
 
 generator:
